New in v0.6.14 (2011/06/??)
----------------------------
Boto moved S3ResponseError, so allow for different imports.

Bugs closed in this release:
433591     AttributeError: FileobjHooked instance has no attribute 'name'
512628     --exclude-filelist-stdin and gpg error with/without PASSPHRASE
705499     "include-filelist-stdin" not implemented on version 0.6.11
739438     [PATCH] Local backend should always try renaming instead of copying
761688     Difference found: File X has permissions 666, expected 666
507904     Cygwin: Full Backup fails with "IOError: [Errno 13] Permission denied"
778215     ncftpls file delete fails in ftpbackend.py
782321     duplicity sftp backend should ignore removing a file which is not there


New in v0.6.13 (2011/04/02)
----------------------------
Bugs closed in this release:
579958     Assertion error "time not moving forward at appropriate pace"
613244     silent data corruption with checkpoint/restore
731905     File "/usr/bin/duplicity", error after upgrade from 6.11 to 6.12

Enhancements added this release:
New manual test to make Ctrl-C issues easier to replicate.
Use python-virtualenv to make testing multiple Python versions easier.
In boto backend check for existing bucket before trying to create.


New in v0.6.12 (2011/03/08)
----------------------------
Bugs closed in this release:
486489     Only full backups done on webdav
578663     Use log codes for common backend errors
581054     Inverted "Current directory" "Previous directory" in error message
620163     OSError: [Errno 2] No such file or directory
629136     sslerror: The read operation timed out with cf
629984     boto backend uses Python 2.5 conditional
655797     symbolic link ownership not preserved
670891     Cygwin: TypeError: basis_file must be a (true) file ...
681980     Duplicity 0.6.11 aborts if RSYNC_RSH not set
700390     Backup fails silently when target is full (sftp, verbosity=4)
704314     Exception in log module

Enhancements added this release: